breaking change for demo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run: echo "testing stuff"
       - run: npm install
       - run: npm test
-  hithere:
+  lint:
     docker:
       - image: circleci/node:8.9
     steps:
@@ -26,9 +26,9 @@ workflows:
   version: 2
   build_test_and_lint:
     jobs:
+      - lint
       - build
-      - hithere
       - test:
           requires:
-            - hithere
+            - lint
 
